[package]
name = "seraph"
version = "1.1.4"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
text2art = { version = "1.0.1", features = [] }

allwords = { version = "0.1.2", features = [] }
rust-crypto = { version = "0.2.36", features = [] }
hex = { version = "0.4.3", features = [] }